; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_block_if.c_blockif_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_block_if.c_blockif_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blockif_ctxt = type { i64 }
%struct.blockif_req = type { i32 }

@BLOCKIF_SIG = common dso_local global i64 0, align 8
@BOP_FLUSH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blockif_flush(%struct.blockif_ctxt* %0, %struct.blockif_req* %1) #0 {
  %3 = alloca %struct.blockif_ctxt*, align 8
  %4 = alloca %struct.blockif_req*, align 8
  store %struct.blockif_ctxt* %0, %struct.blockif_ctxt** %3, align 8
  store %struct.blockif_req* %1, %struct.blockif_req** %4, align 8
  %5 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %3, align 8
  %6 = getelementptr inbounds %struct.blockif_ctxt, %struct.blockif_ctxt* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @BLOCKIF_SIG, align 8
  %9 = icmp eq i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %3, align 8
  %13 = load %struct.blockif_req*, %struct.blockif_req** %4, align 8
  %14 = load i32, i32* @BOP_FLUSH, align 4
  %15 = call i32 @blockif_request(%struct.blockif_ctxt* %12, %struct.blockif_req* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @blockif_request(%struct.blockif_ctxt*, %struct.blockif_req*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
